--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.29.0",
